@@ -156,7 +156,7 @@ g_file_get_contents (const gchar *filename, gchar **contents, gsize *length, GEr
 gint
 g_file_open_tmp (const gchar *tmpl, gchar **name_used, GError **error)
 {
-	const static gchar *default_tmpl = "file-g-XXXXXX";
+	const static gchar *default_tmpl = ".XXXXXX";
 	gchar *t;
 	gint fd;
 	gint len;
@@ -198,5 +198,46 @@ g_file_open_tmp (const gchar *tmpl, gchar **name_used, GError **error)
 		g_free (t);
 	}
 	return fd;
+}
+
+gboolean
+g_file_test (const gchar *filename, GFileTest test)
+{
+	struct stat st;
+	gboolean have_stat;
+
+	if (filename == NULL || test == 0)
+		return FALSE;
+
+	have_stat = FALSE;
+	if ((test & G_FILE_TEST_EXISTS) != 0) {
+		if (access (filename, F_OK) == 0)
+			return TRUE;
+	}
+
+	if ((test & G_FILE_TEST_IS_EXECUTABLE) != 0) {
+		if (access (filename, X_OK) == 0)
+			return TRUE;
+	}
+
+	if ((test & G_FILE_TEST_IS_SYMLINK) != 0) {
+		have_stat = (lstat (filename, &st) == 0);
+		if (have_stat && S_ISLNK (st.st_mode))
+			return TRUE;
+	}
+
+	if ((test & G_FILE_TEST_IS_REGULAR) != 0) {
+		if (!have_stat)
+			have_stat = (stat (filename, &st) == 0);
+		if (have_stat && S_ISREG (st.st_mode))
+			return TRUE;
+	}
+	if ((test & G_FILE_TEST_IS_DIR) != 0) {
+		if (!have_stat)
+			have_stat = (stat (filename, &st) == 0);
+		if (have_stat && S_ISDIR (st.st_mode))
+			return TRUE;
+	}
+	return FALSE;
 }
 
