@@ -513,8 +513,20 @@ typedef enum {
 	G_FILE_ERROR_FAILED
 } GFileError;
 
+typedef enum {
+	G_FILE_TEST_IS_REGULAR = 1 << 0,
+	G_FILE_TEST_IS_SYMLINK = 1 << 1,
+	G_FILE_TEST_IS_DIR = 1 << 2,
+	G_FILE_TEST_IS_EXECUTABLE = 1 << 3,
+	G_FILE_TEST_EXISTS = 1 << 4
+} GFileTest;
+
+
 gboolean   g_file_get_contents (const gchar *filename, gchar **contents, gsize *length, GError **error);
 GFileError g_file_error_from_errno (gint err_no);
 gint       g_file_open_tmp (const gchar *tmpl, gchar **name_used, GError **error);
+gboolean   g_file_test (const gchar *filename, GFileTest test);
+
+
 #endif
 
